fix: linear to circular gradient in dark mode

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body h2:hover {
     transition: all 0.3s ease-in-out;
 }
 .animated-dark {
-    background: linear-gradient(40deg, #620062, #150979, #00bbab, #00a446) repeat-x;
+    background: radial-gradient(circle, #720672, #271c8a, #008378, #00a446) repeat-x;
     background-size: 300% 300%;
     animation: color 10s ease-in-out infinite;
     transition: all 0.3s ease-in-out;
